# cascade-framework

./: .gitignore  README.md  dependencies.txt  main.py  pyproject.toml  questions.md  requirements.txt  todo.md
cascadef/: Node.py
data/: ABCDCatering.xls
examples/: example_infection.py  gui_example.py  twitter.py
lib/: twitterdata.py
src/: network.py  twitterdata.py
src/cascadef/: cascade.py  facebook.py  graph.py  model.py  node.py  plugin.py  slider.py
tests/: example_infection.py  gui_example.py  test_cascade.py  test_example.py  test_graph.py  test_plugin.py
