[project]
name = "cascadef"
version = "0.1.0"
description = "Modular library for taking data and producing a cascade"
authors = [
    {name = "atbarry", email = "albarry465@gmail.com"},
]
dependencies = [
    "pytest>=8.1.1",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "networkx>=3.2.1",
    "matplotlib>=3.8.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
